--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,14 @@
   border-radius: 2rem;
 }
 
+.connect {
+  width: 70%;
+  margin: 1rem auto;
+  background: #31b0e8;
+  color: #fff;
+  padding: 1rem;
+  border-radius: 1rem;
+}
 
 .connectBtn {
   background-color: black;
@@ -24,6 +32,7 @@
   font-weight: 500;
   padding: 0.5rem 2rem;
   outline: none;
+  width: 100%;
   border: none;
 }
 
