--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,7 @@
 }
 
 .harmony {
-  background: url('https://gblobscdn.gitbook.com/orgs%2F-LiOowK9lXTPyPxhkAcr%2Favatar.png?alt=media');
+  background: url('../assets/harmony\ logo_defaced.png');
   width: 100vmax;
   height: 100rem;
   padding-top: 10rem;
